force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/sugati__Itinerary_PDF_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Itinerary PDF Setting</label>
</CustomObject>