force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__Accommodation_Images_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>sugati__Accommodation_Images_Per_Page__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Accommodation Images Per Page</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>