force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__Accommodation_Supplier_Types__c.field-meta.xml
<CustomField>
    <fullName>sugati__Accommodation_Supplier_Types__c</fullName>
    <description>Supplier related images for Accommodation and Hotel supplier types can be searched in Itinerary Setting by default. Enter additional supplier types for the supplier related images to be searchable in Itinerary Setting.</description>
    <inlineHelpText>Supplier related images for Accommodation and Hotel supplier types can be searched in Itinerary Setting by default. Enter additional supplier types for the supplier related images to be searchable in Itinerary Setting.</inlineHelpText>
    <label>Supplier Types for Image Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>