force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__Additional_Items_Label_Override__c.field-meta.xml
<CustomField>
    <fullName>sugati__Additional_Items_Label_Override__c</fullName>
    <label>Additional Items Label Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>