force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__At_A_Glance_Table_Border_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__At_A_Glance_Table_Border_Color__c</fullName>
    <description>using html colour code #000000 for black</description>
    <label>At A Glance Table Border Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>