force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__Default_to_Company_Logo__c.field-meta.xml
<CustomField>
    <fullName>sugati__Default_to_Company_Logo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Default to Company Logo</label>
    <type>Checkbox</type>
</CustomField>