force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__Display_days_or_nights__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_days_or_nights__c</fullName>
    <defaultValue>&quot;days&quot;</defaultValue>
    <label>Display days or nights</label>
    <length>10</length>
    <type>Text</type>
</CustomField>