force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__Display_Quotation_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Quotation_Text__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Quotation Text</label>
    <type>Checkbox</type>
</CustomField>