force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__Footer_Company_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__Footer_Company_Description__c</fullName>
    <label>Footer Company Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>