force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__Footer_Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>sugati__Footer_Company_Phone__c</fullName>
    <label>Footer Company Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>