force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__Heading_Override_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__Heading_Override_Color__c</fullName>
    <label>Heading Override Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>