force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__Hide_Map_Zoom_Level__c.field-meta.xml
<CustomField>
    <fullName>sugati__Hide_Map_Zoom_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Map Zoom Level</label>
    <type>Checkbox</type>
</CustomField>