force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__Itinerary_Font_Family__c.field-meta.xml
<CustomField>
    <fullName>sugati__Itinerary_Font_Family__c</fullName>
    <label>Itinerary Font Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>