force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__Landscape_Layout__c.field-meta.xml
<CustomField>
    <fullName>sugati__Landscape_Layout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Page layout will be in landscape if it&apos;s checked. Default will be in portrait mode.</description>
    <label>Landscape Layout</label>
    <type>Checkbox</type>
</CustomField>