force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__PDF_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__PDF_Background_Color__c</fullName>
    <label>PDF Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>