force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__Show_Cover_Image_Border__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Cover_Image_Border__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Cover Image Border</label>
    <type>Checkbox</type>
</CustomField>