force-app/main/default/objects/sugati__Itinerary_PDF_Setting__c/fields/sugati__Sugati_Booking_Stage__c.field-meta.xml
<CustomField>
    <fullName>sugati__Sugati_Booking_Stage__c</fullName>
    <label>Sugati Booking Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>